# GladiatorBot-reverse

./: AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
dev_tools/assets/: match_reply.c  unit_test_chat.c
dev_tools/scripts/: check_be_ai_matrix.py  run_headless_parity.sh  verify_parity_assets.sh
docs/: be_ai_parity_matrix.md  botlib_import_comparison.md  parity_audit_report.md  parity_plan.md  parity_testing_guide.md
src/botlib/aas/: CMakeLists.txt
src/botlib/ai/: CMakeLists.txt
src/botlib/ai_chat/: ai_chat.c  ai_chat.h
src/botlib/common/: CMakeLists.txt  l_memory.c
src/botlib/ea/: CMakeLists.txt
src/botlib/interface/: CMakeLists.txt  bot_interface.c
src/botlib/precomp/: CMakeLists.txt  l_precomp.c  l_script.c  l_script.h
src/q2bridge/: CMakeLists.txt  bridge.c  bridge.h
src/shared/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
tests/chat/: CMakeLists.txt  README.md  test_bot_chat.c  test_bot_chat_stubs.c
tests/parity/: CMakeLists.txt  test_bot_interface.c  test_bridge.c  test_precompiler_lexer.c
